--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <div class="container">
           <h2 class="secondary-header visually-hidden">Наши преимущества</h2>
           <ul class="list">
-            <li>
+            <li class="list-item">
               <h3 class="caption">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="caption">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="caption">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3 class="caption">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -130,41 +130,49 @@
         <div class="container">
           <h2 class="secondary-header">Наша команда</h2>
           <ul class="list">
-            <li>
+            <li class="card">
               <img
                 src="./images/igor-demianenko-photo.jpg"
                 alt="Дизайнер продукта"
                 width="270"
               />
-              <h3 class="caption caption-name">Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <div class="person-caption">
+                <h3 class="caption caption-name">Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="card">
               <img
                 src="./images/olga-repina-photo.jpg"
                 alt="Разработчик"
                 width="270"
               />
-              <h3 class="caption caption-name">Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <div class="person-caption">
+                <h3 class="caption caption-name">Ольга Репина</h3>
+                <p>Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="card">
               <img
                 src="./images/nikolai-tarasov-photo.jpg"
                 alt="Специалист по маркетингу"
                 width="270"
               />
-              <h3 class="caption caption-name">Николай Тарасов</h3>
-              <p>Marketing</p>
+              <div class="person-caption">
+                <h3 class="caption caption-name">Николай Тарасов</h3>
+                <p>Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="card">
               <img
                 src="./images/mikhail-ermakov-photo.jpg"
                 alt="UI дизайнер"
                 width="270"
               />
-              <h3 class="caption caption-name">Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <div class="person-caption">
+                <h3 class="caption caption-name">Михаил Ермаков</h3>
+                <p>UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
