--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,12 @@
           <a href="/" class="logo"
             ><span class="logo-highlight">Web</span>Studio</a
           >
-
           <ul class="list site-nav">
             <li class="menu-item">
               <a href="index.html" class="anchor">Студия</a>
             </li>
             <li class="menu-item">
-              <a href="portfolio.html" class="anchor">Портфолио</a>
+              <a href="portfolio.html" class="anchor active">Портфолио</a>
             </li>
             <li class="menu-item"><a href="" class="anchor">Контакты</a></li>
           </ul>
@@ -49,33 +48,27 @@
 
     <main>
       <!--Portfolio section-->
-      <section class="section" class="filters">
+      <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Our Projects Portfolio</h1>
-          <!--Filters section-->
-          <ul class="list" class="filters-list">
-            <li>
-              <button type="button" class="filter-button">Все</button>
+          <ul class="filters list">
+            <li class="list-item">
+              <button type="button" class="filter-button active">Все</button>
             </li>
-            <li>
+            <li class="list-item">
               <button type="button" class="filter-button">Веб-сайты</button>
             </li>
-            <li>
+            <li class="list-item">
               <button type="button" class="filter-button">Приложения</button>
             </li>
-            <li>
+            <li class="list-item">
               <button type="button" class="filter-button">Дизайн</button>
             </li>
-            <li>
+            <li class="list-item">
               <button type="button" class="filter-button">Маркетинг</button>
             </li>
           </ul>
-        </div>
-      </section>
-      <!--Project samples section-->
-      <section class="section project-samples">
-        <div class="container">
-          <ul class="project-thumbnails">
+          <ul class="project-thumbnails list">
             <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
@@ -83,7 +76,7 @@
                   alt="Сайт Технокряк"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Технокряк</h2>
                   <p>Веб-сайт</p>
                   <p class="visually-hidden">
@@ -101,7 +94,7 @@
                   alt="Постер баскетбольного матча"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">
                     Постер New Orlean vs Golden Star
                   </h2>
@@ -121,7 +114,7 @@
                   alt="Ресторан Seafood"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Ресторан Seafood</h2>
                   <p>Приложение</p>
                   <p class="visually-hidden">
@@ -135,7 +128,7 @@
             <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Проект Prime</h2>
                   <p>Маркетинг</p>
                   <p class="visually-hidden">
@@ -149,7 +142,7 @@
             <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Проект Boxes</h2>
                   <p>Приложение</p>
                   <p class="visually-hidden">
@@ -167,7 +160,7 @@
                   alt="Веб-сайт Inspiration"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">
                     Inspiration has no Borders
                   </h2>
@@ -187,7 +180,7 @@
                   alt="Издание Limited Edition"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Издание Limited Edition</h2>
                   <p>Дизайн</p>
                   <p class="visually-hidden">
@@ -201,7 +194,7 @@
             <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Проект LAB</h2>
                   <p>Маркетинг</p>
                   <p class="visually-hidden">
@@ -219,7 +212,7 @@
                   alt="Приложение Growing Business"
                   width="370"
                 />
-                <div>
+                <div class="project-caption">
                   <h2 class="caption project-name">Growing Business</h2>
                   <p>Приложение</p>
                   <p class="visually-hidden">
